samples/_failures_safe/1761126570_0f0f11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bbf60988.c: In function ‘main’:
./samples/SAFE/__tmp_bbf60988.c:134:5: error: expected expression at end of input
  134 |     if (!read_size_t("Enter columns for matrix A: ", &cols))
      |     ^~
./samples/SAFE/__tmp_bbf60988.c:134:5: error: expected declaration or statement at end of input
